[package]
name = "naslink-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
log = "0.4.28"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simple_logger = "5.1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
